# kiro-hello-world-rust

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md
.kiro/specs/sso-web-app/: design.md  requirements.md  tasks.md
migrations/: 001_create_users_table.sql
scripts/: init_db.ps1  init_db.sh
src/: auth.rs  config.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  session.rs  templates.rs
templates/: base.html  dashboard.html  login.html
tests/: integration_tests.rs
